model selection test

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,6 +27,46 @@
     "\n",
     "train_df = dev_df.iloc[train_indices]\n",
     "test_df = dev_df.iloc[test_indices]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train=train_df.drop(columns=['x', 'y'])\n",
+    "y_train=train_df.loc[:,['x', 'y']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.multioutput import MultiOutputRegressor\n",
+    "\n",
+    "max_depth = 30\n",
+    "regr_multirf = MultiOutputRegressor(\n",
+    "    RandomForestRegressor(n_estimators=100, max_depth=max_depth, random_state=0)\n",
+    ")\n",
+    "\n",
+    "regr_multirf.fit(X_train, y_train)\n",
+    "regr_rf = RandomForestRegressor(n_estimators=100, max_depth=max_depth, random_state=2)\n",
+    "regr_rf.fit(X_train, y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test=test_df.drop(columns=['x', 'y'])\n",
+    "y_multirf = regr_multirf.predict(X_test)\n",
+    "y_rf = regr_rf.predict(X_test)"
    ]
   }
  ],
