--- a/outliers_analysis/gridsearch.ipynb
+++ b/outliers_analysis/gridsearch.ipynb
@@ -1,15 +1,52 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'skopt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mskopt\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BayesanSearchCV\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'skopt'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import sklearn\n"
+    "import sklearn\n",
+    "from skopt import BayesanSearchCV"
    ]
   },
   {
@@ -68,8 +105,7 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import r2_score\n",
-    "param_grid = { \"n_estimators\":[100,250,500], \"criterion\":[\"squared_error\",\"absolute_error\"], \"min_samples_split\": [10, 50 ,100],  \"min_samples_leaf\": [10, 50 ,100], \"max_depth\":[50, 100, 250], \"max_features\":[\"auto\", \"sqrt\", \"log2\"], \"random_state\":[rs], \"n_jobs\": [-1] }\n",
-    "gs = GridSearchCV(RandomForestRegressor(), param_grid, scoring=\"r2\", n_jobs=-1, cv=5)\n"
+    "\n"
    ]
   },
   {
