--- a/outliers_analysis/randomforest_importancescore.ipynb
+++ b/outliers_analysis/randomforest_importancescore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,24 @@
     "import matplotlib.pyplot as plt\n",
     "import sklearn\n",
     "import csv\n",
-    "import plotly.express as px"
+    "import plotly.express as px\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import r2_score\n",
+    "from sklearn.metrics import mean_squared_error as mse \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from  skopt import BayesSearchCV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,14 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1734,9 +1739,6 @@
     }
    ],
    "source": [
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.metrics import r2_score\n",
-    "\n",
     "forest = RandomForestRegressor(min_samples_leaf=50, min_samples_split=50, max_features='log2', max_depth=100,random_state=rs)\n",
     "forest.fit(X_train, y_train)\n",
     "r2_score(y_valid, forest.predict(X_valid))"
@@ -1861,23 +1863,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import GridSearchCV\n",
-    "param_grid = { \"n_estimators\":[100,250,500], \"criterion\":[\"squared_error\",\"absolute_error\"], \"max_depth\":[50,100, 250], \"max_features\":[1.0, \"sqrt\", \"log2\"], \"random_state\":[rs], \"n_jobs\":[-1] } \n",
-    "gs = GridSearchCV(RandomForestRegressor(), param_grid,scoring=\"r2\", n_jobs=-1, cv=5)"
+    "parameters = {\"max_depth\":[50,100], \"min_samples_split\": [2,5,10], \"max_features\":[ \"sqrt\", \"log2\"], \"random_state\":[rs], \"n_jobs\":[-1] } \n",
+    "bayes = BayesSearchCV(RandomForestRegressor(), search_spaces=parameters, scoring=\"r2\", cv=5, n_iter=20, n_jobs=-1, random_state=rs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gs.fit(X_train_valid,y_train_valid)\n",
-    "gs.best_score_"
+    "np.int = int\n",
+    "bayes.fit(X_train_valid, y_train_valid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gs.fit(X_train,y_train_valid)\n",
+    "gs.best_paramsbayes."
    ]
   },
   {
@@ -1918,7 +1929,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
