--- a/model_selectioin/model_parameter_tuning1.ipynb
+++ b/model_selectioin/model_parameter_tuning1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,6 +619,65 @@
     "rfr_random=RandomizedSearchCV(estimator=rfr_base,\n",
     "                              param_distributions=rfr_hp_range,\n",
     "                              n_iter=200,\n",
+    "                              n_jobs=-1,\n",
+    "                              cv=5,\n",
+    "                              verbose=1,\n",
+    "                              random_state=42)\n",
+    "rfr_random.fit(X_train,y_train)\n",
+    "\n",
+    "best_hp_now=rfr_random.best_params_\n",
+    "print(best_hp_now)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'n_estimators': [500, 600, 700], 'max_features': ['sqrt', 'log2'], 'max_depth': [150, 200, 300, None], 'min_samples_split': [2, 5, 10, 20, 50], 'min_samples_leaf': [1, 2, 5, 10, 20]}\n",
+      "Fitting 5 folds for each of 100 candidates, totalling 500 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/xuyan/anaconda3/lib/python3.11/site-packages/joblib/externals/loky/process_executor.py:700: UserWarning: A worker stopped while some jobs were given to the executor. This can be caused by a too short worker timeout or by a memory leak.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'n_estimators': 500, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': 'sqrt', 'max_depth': 300}\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_estimators_range=[500, 600, 700]\n",
+    "max_features_range=['sqrt','log2']\n",
+    "max_depth_range=[150, 200, 300]\n",
+    "max_depth_range.append(None)\n",
+    "min_samples_split_range=[2,5,10,20,50]\n",
+    "min_samples_leaf_range=[1, 2, 5, 10, 20]\n",
+    "\n",
+    "rfr_hp_range={'n_estimators':n_estimators_range,\n",
+    "              'max_features':max_features_range,\n",
+    "              'max_depth':max_depth_range,\n",
+    "              'min_samples_split':min_samples_split_range,\n",
+    "              'min_samples_leaf':min_samples_leaf_range\n",
+    "             }\n",
+    "print(rfr_hp_range)\n",
+    "\n",
+    "rfr_base=RandomForestRegressor()\n",
+    "rfr_random=RandomizedSearchCV(estimator=rfr_base,\n",
+    "                              param_distributions=rfr_hp_range,\n",
+    "                              n_iter=100,\n",
     "                              n_jobs=-1,\n",
     "                              cv=5,\n",
     "                              verbose=1,\n",
