--- a/model_selectioin/model_parameter_tuning3.ipynb
+++ b/model_selectioin/model_parameter_tuning3.ipynb
@@ -100,6 +100,13 @@
       "/Users/xuyan/anaconda3/lib/python3.11/site-packages/joblib/externals/loky/process_executor.py:700: UserWarning: A worker stopped while some jobs were given to the executor. This can be caused by a too short worker timeout or by a memory leak.\n",
       "  warnings.warn(\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'n_estimators': 495, 'min_samples_split': 2, 'min_samples_leaf': 2, 'max_features': 'sqrt', 'max_depth': 45}\n"
+     ]
     }
    ],
    "source": [
@@ -108,6 +115,102 @@
     "max_depth_range=[45,47,50,52,55]\n",
     "max_depth_range.append(None)\n",
     "min_samples_split_range=[2,5,10,20,30]\n",
+    "min_samples_leaf_range=[1, 2, 5, 10, 20]\n",
+    "\n",
+    "rfr_hp_range={'n_estimators':n_estimators_range,\n",
+    "              'max_features':max_features_range,\n",
+    "              'max_depth':max_depth_range,\n",
+    "              'min_samples_split':min_samples_split_range,\n",
+    "              'min_samples_leaf':min_samples_leaf_range\n",
+    "             }\n",
+    "print(rfr_hp_range)\n",
+    "\n",
+    "rfr_base=RandomForestRegressor()\n",
+    "rfr_random=RandomizedSearchCV(estimator=rfr_base,\n",
+    "                              param_distributions=rfr_hp_range,\n",
+    "                              n_iter=200,\n",
+    "                              n_jobs=-1,\n",
+    "                              cv=10,\n",
+    "                              verbose=1,\n",
+    "                              random_state=42)\n",
+    "rfr_random.fit(X_train,y_train)\n",
+    "\n",
+    "best_hp_now=rfr_random.best_params_\n",
+    "print(best_hp_now)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'n_estimators': [493, 495, 497], 'max_features': ['sqrt'], 'max_depth': [43, 45, 47, None], 'min_samples_split': [2, 5, 10], 'min_samples_leaf': [1, 2, 5, 10]}\n",
+      "Fitting 10 folds for each of 144 candidates, totalling 1440 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/xuyan/anaconda3/lib/python3.11/site-packages/sklearn/model_selection/_search.py:307: UserWarning: The total space of parameters 144 is smaller than n_iter=200. Running 144 iterations. For exhaustive searches, use GridSearchCV.\n",
+      "  warnings.warn(\n",
+      "/Users/xuyan/anaconda3/lib/python3.11/site-packages/joblib/externals/loky/process_executor.py:700: UserWarning: A worker stopped while some jobs were given to the executor. This can be caused by a too short worker timeout or by a memory leak.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'n_estimators': 495, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': 'sqrt', 'max_depth': 43}\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_estimators_range=[493,495,497]\n",
+    "max_features_range=['sqrt']\n",
+    "max_depth_range=[43,45,47]\n",
+    "max_depth_range.append(None)\n",
+    "min_samples_split_range=[2,5,10]\n",
+    "min_samples_leaf_range=[1,2,5,10]\n",
+    "\n",
+    "rfr_hp_range={'n_estimators':n_estimators_range,\n",
+    "              'max_features':max_features_range,\n",
+    "              'max_depth':max_depth_range,\n",
+    "              'min_samples_split':min_samples_split_range,\n",
+    "              'min_samples_leaf':min_samples_leaf_range\n",
+    "             }\n",
+    "print(rfr_hp_range)\n",
+    "\n",
+    "rfr_base=RandomForestRegressor()\n",
+    "rfr_random=RandomizedSearchCV(estimator=rfr_base,\n",
+    "                              param_distributions=rfr_hp_range,\n",
+    "                              n_iter=200,\n",
+    "                              n_jobs=-1,\n",
+    "                              cv=10,\n",
+    "                              verbose=1,\n",
+    "                              random_state=42)\n",
+    "rfr_random.fit(X_train,y_train)\n",
+    "\n",
+    "best_hp_now=rfr_random.best_params_\n",
+    "print(best_hp_now)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_estimators_range=[800, 1000, 1200]\n",
+    "max_features_range=['sqrt']\n",
+    "max_depth_range=[150, 200]\n",
+    "max_depth_range.append(None)\n",
+    "min_samples_split_range=[2,5,10,20,50]\n",
     "min_samples_leaf_range=[1, 2, 5, 10, 20]\n",
     "\n",
     "rfr_hp_range={'n_estimators':n_estimators_range,\n",
