--- a/model_selectioin/random_forest_regressor_test.ipynb
+++ b/model_selectioin/random_forest_regressor_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,19 +292,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.442800491099803\n"
+      "4.4497516078756485\n"
      ]
     }
    ],
    "source": [
-    "rfr = RandomForestRegressor(n_estimators=490,min_samples_split=5,min_samples_leaf=1,max_features='sqrt',max_depth=50,random_state=2024)\n",
+    "rfr = RandomForestRegressor(n_estimators=490,min_samples_split=5,min_samples_leaf=1,max_features='sqrt',max_depth=50,random_state=rs)\n",
     "rfr.fit(X_train, y_train)\n",
     "y_rfr=rfr.predict(X_test)\n",
     "distance=np.mean(np.sqrt(np.sum((y_rfr - y_test) ** 2, axis=1)))\n",
@@ -316,6 +316,139 @@
     "df['Predicted'] = df.apply(lambda row: f\"{row['Id']:.1f}|{row['Predicted']:.1f}\", axis=1)\n",
     "df['Id'] = df.index\n",
     "df.to_csv('output7.csv', index=False, sep=',')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "{'n_estimators': 495, 'min_samples_split': 2, 'min_samples_leaf': 2, 'max_features': 'sqrt', 'max_depth': 45}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.460348824798174\n"
+     ]
+    }
+   ],
+   "source": [
+    "rfr = RandomForestRegressor(n_estimators=495,min_samples_split=2,min_samples_leaf=2,max_features='sqrt',max_depth=45,random_state=rs)\n",
+    "rfr.fit(X_train, y_train)\n",
+    "y_rfr=rfr.predict(X_test)\n",
+    "distance=np.mean(np.sqrt(np.sum((y_rfr - y_test) ** 2, axis=1)))\n",
+    "print(distance)\n",
+    "\n",
+    "eva_y=rfr.predict(eva_df)\n",
+    "\n",
+    "df = pd.DataFrame(eva_y, columns=['Id', 'Predicted'])\n",
+    "df['Predicted'] = df.apply(lambda row: f\"{row['Id']:.1f}|{row['Predicted']:.1f}\", axis=1)\n",
+    "df['Id'] = df.index\n",
+    "df.to_csv('output8.csv', index=False, sep=',')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "{'n_estimators': 550, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': 'sqrt', 'max_depth': 150}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.438729011590766\n"
+     ]
+    }
+   ],
+   "source": [
+    "rfr = RandomForestRegressor(n_estimators=550,min_samples_split=2,min_samples_leaf=1,max_features='sqrt',max_depth=150,random_state=rs)\n",
+    "rfr.fit(X_train, y_train)\n",
+    "y_rfr=rfr.predict(X_test)\n",
+    "distance=np.mean(np.sqrt(np.sum((y_rfr - y_test) ** 2, axis=1)))\n",
+    "print(distance)\n",
+    "\n",
+    "eva_y=rfr.predict(eva_df)\n",
+    "\n",
+    "df = pd.DataFrame(eva_y, columns=['Id', 'Predicted'])\n",
+    "df['Predicted'] = df.apply(lambda row: f\"{row['Id']:.1f}|{row['Predicted']:.1f}\", axis=1)\n",
+    "df['Id'] = df.index\n",
+    "df.to_csv('output9.csv', index=False, sep=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.426690679410952\n"
+     ]
+    }
+   ],
+   "source": [
+    "rfr = RandomForestRegressor(n_estimators=800,min_samples_split=2,min_samples_leaf=1,max_features='sqrt',max_depth=150,random_state=rs)\n",
+    "rfr.fit(X_train, y_train)\n",
+    "y_rfr=rfr.predict(X_test)\n",
+    "distance=np.mean(np.sqrt(np.sum((y_rfr - y_test) ** 2, axis=1)))\n",
+    "print(distance)\n",
+    "\n",
+    "eva_y=rfr.predict(eva_df)\n",
+    "\n",
+    "df = pd.DataFrame(eva_y, columns=['Id', 'Predicted'])\n",
+    "df['Predicted'] = df.apply(lambda row: f\"{row['Id']:.1f}|{row['Predicted']:.1f}\", axis=1)\n",
+    "df['Id'] = df.index\n",
+    "df.to_csv('output10.csv', index=False, sep=',')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "{'n_estimators': 1200, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': 'sqrt', 'max_depth': 200}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.420698153416437\n"
+     ]
+    }
+   ],
+   "source": [
+    "rfr = RandomForestRegressor(n_estimators=1200,min_samples_split=2,min_samples_leaf=1,max_features='sqrt',max_depth=200,random_state=rs)\n",
+    "rfr.fit(X_train, y_train)\n",
+    "y_rfr=rfr.predict(X_test)\n",
+    "distance=np.mean(np.sqrt(np.sum((y_rfr - y_test) ** 2, axis=1)))\n",
+    "print(distance)\n",
+    "\n",
+    "eva_y=rfr.predict(eva_df)\n",
+    "\n",
+    "df = pd.DataFrame(eva_y, columns=['Id', 'Predicted'])\n",
+    "df['Predicted'] = df.apply(lambda row: f\"{row['Id']:.1f}|{row['Predicted']:.1f}\", axis=1)\n",
+    "df['Id'] = df.index\n",
+    "df.to_csv('output11.csv', index=False, sep=',')"
    ]
   }
  ],
