--- a/solution_NN.ipynb
+++ b/solution_NN.ipynb
@@ -40,6 +40,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://www.tensorflow.org/api_docs/python/tf/keras/Sequential\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -656,7 +663,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# parameters tuning"
+    "# parameters tuning\n",
+    "https://keras.io/guides/keras_tuner/getting_started/"
    ]
   },
   {
