--- a/model_selectioin/tensorflow_parameter_tuning.ipynb
+++ b/model_selectioin/tensorflow_parameter_tuning.ipynb
@@ -419,6 +419,42 @@
     "df['Id'] = df.index\n",
     "df.to_csv('tensor_output4.csv', index=False, sep=',')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.optimizers import schedules\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "def build_model(activation='sigmoid', optimizer='adam'):\n",
+    "    model = keras.Sequential([\n",
+    "        layers.Dense(512, activation=activation, input_dim=X_train.shape[1]),\n",
+    "        #layers.Dropout(0.2),\n",
+    "        layers.Dense(512, activation=activation),\n",
+    "        #layers.Dropout(0.2),\n",
+    "        layers.Dense(2, activation=None)\n",
+    "    ])\n",
+    "    \n",
+    "    learning_rate_schedule = schedules.ExponentialDecay(initial_learning_rate=0.001, decay_steps=10000, decay_rate=0.9)\n",
+    "    optimizer = keras.optimizers.Adam(learning_rate=learning_rate_schedule)\n",
+    "    model.compile(optimizer=optimizer, loss='mean_squared_error', metrics=[\"mae\", \"acc\"])\n",
+    "    return model\n",
+    "\n",
+    "\n",
+    "model = build_model()\n",
+    "model.fit(X_train_scaled, y_train, epochs=50, batch_size=32, validation_split=0.2)\n",
+    "\n",
+    "y_pred = model.predict(X_test_scaled)\n",
+    "\n",
+    "distance=np.mean(np.sqrt(np.sum((y_pred - y_test) ** 2, axis=1)))\n",
+    "print(distance)"
+   ]
   }
  ],
  "metadata": {
