--- a/solution_NN.ipynb
+++ b/solution_NN.ipynb
@@ -1005,7 +1005,53 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# I ran this part on kaggle, so there is no output\n",
+    "from tensorflow.keras.optimizers import schedules\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "def build_model(activation='sigmoid', optimizer='adam'):\n",
+    "    model = keras.Sequential([\n",
+    "        layers.Dense(512, activation=activation, input_dim=X_train.shape[1]),\n",
+    "        #layers.Dropout(0.2),\n",
+    "        layers.Dense(512, activation=activation),\n",
+    "        #layers.Dropout(0.2),\n",
+    "        layers.Dense(2, activation=None)\n",
+    "    ])\n",
+    "    \n",
+    "    learning_rate_schedule = schedules.ExponentialDecay(initial_learning_rate=0.001, decay_steps=10000, decay_rate=0.9)\n",
+    "    optimizer = keras.optimizers.Adam(learning_rate=learning_rate_schedule)\n",
+    "    model.compile(optimizer=optimizer, loss='mean_squared_error', metrics=[\"mae\", \"acc\"])\n",
+    "    return model\n",
+    "\n",
+    "\n",
+    "model = build_model()\n",
+    "model.fit(X_train_scaled, y_train, epochs=50, batch_size=32, validation_split=0.2)\n",
+    "\n",
+    "y_pred = model.predict(X_test_scaled)\n",
+    "\n",
+    "distance=np.mean(np.sqrt(np.sum((y_pred - y_test) ** 2, axis=1)))\n",
+    "print(distance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eva_df_scaled = scaler.transform(eva_df)\n",
+    "\n",
+    "eva_y=model.predict(eva_df_scaled)\n",
+    "\n",
+    "df = pd.DataFrame(eva_y, columns=['Id', 'Predicted'])\n",
+    "df['Predicted'] = df.apply(lambda row: f\"{row['Id']:.1f}|{row['Predicted']:.1f}\", axis=1)\n",
+    "df['Id'] = df.index\n",
+    "df.to_csv('tensor_output.csv', index=False, sep=',')"
+   ]
   }
  ],
  "metadata": {
