--- a/model_selectioin/bayes search.ipynb
+++ b/model_selectioin/bayes search.ipynb
@@ -96,17 +96,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "b9a3daa6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.concat([dvlp_df, eval_df], sort=False)\n",
-    "df.set_index('Id', inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "id": "25ad6bbb",
    "metadata": {},
@@ -570,8 +559,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parameters = {\"n_estimators\"=[100,250,500], \"max_depth\":[50,100], \"min_samples_split\": [2,5,10], \"max_features\":[ \"sqrt\", \"log2\"], \"random_state\":[rs], \"n_jobs\":[-1] } \n",
-    "bayes = BayesSearchCV(RandomForestRegressor(), search_spaces=parameters, scoring=\"r2\", cv=5, n_iter=100, n_jobs=-1, random_state=rs)"
+    "parameters = {\"n_estimators\":[50,100], \"max_depth\":[50,100], \"min_samples_split\": [2,5,10], \"max_features\":[ \"sqrt\", \"log2\"], \"random_state\":[rs], \"n_jobs\":[-1] } \n",
+    "bayes = BayesSearchCV(RandomForestRegressor(), search_spaces=parameters, scoring=\"r2\", cv=5, n_iter=20, n_jobs=-1, random_state=rs)"
    ]
   },
   {
@@ -581,6 +570,14 @@
    "source": [
     "np.int = int\n",
     "bayes.fit(X_train_valid, y_train_valid)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "df4c0321",
+   "metadata": {},
+   "source": [
+    "bayes.best_score_"
    ]
   },
   {
@@ -619,50 +616,7 @@
     "df = pd.DataFrame(eva_y, columns=['Id', 'Predicted'])\n",
     "df['Predicted'] = df.apply(lambda row: f\"{row['Id']:.1f}|{row['Predicted']:.1f}\", axis=1)\n",
     "df['Id'] = df.index\n",
-    "df.to_csv('outputbayes2.csv', index=False, sep=',')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0cb37a19",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parameters = {\"n_estimators\"=[150,250, 350, 500], \"max_depth\":[100, 200, 250, 500 ], \"min_samples_split\": [2,5,10], \"max_features\":[ \"sqrt\", \"log2\"], \"random_state\":[rs], \"n_jobs\":[-1] } \n",
-    "bayes = BayesSearchCV(RandomForestRegressor(), search_spaces=parameters, scoring=\"r2\", cv=5, n_iter=200, n_jobs=-1, random_state=rs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "46be8687",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bayes.fit(X_train_valid, y_train_valid)\n",
-    "bayes.best_params_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b8d00043",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rfr = RandomForestRegressor(n_estimators=,min_samples_split= ,max_features='',max_depth= ,random_state=rs)\n",
-    "rfr.fit(X_train, y_train)\n",
-    "y_rfr=rfr.predict(X_test)\n",
-    "distance=np.mean(np.sqrt(np.sum((y_rfr - y_test) ** 2, axis=1)))\n",
-    "print(distance)\n",
-    "\n",
-    "eva_y=rfr.predict(eva_df)\n",
-    "\n",
-    "df = pd.DataFrame(eva_y, columns=['Id', 'Predicted'])\n",
-    "df['Predicted'] = df.apply(lambda row: f\"{row['Id']:.1f}|{row['Predicted']:.1f}\", axis=1)\n",
-    "df['Id'] = df.index\n",
-    "df.to_csv('outputbayes3.csv', index=False, sep=',')\n"
+    "df.to_csv('outputbayes0.csv', index=False, sep=',')\n"
    ]
   }
  ],
