--- a/model_selectioin/bayes search.ipynb
+++ b/model_selectioin/bayes search.ipynb
@@ -26,8 +26,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "development = pd.read_csv(r'C:\\Users\\feder\\Desktop\\POLI\\DSL\\DSL_Winter_Project_2024\\DSL_Winter_Project_2024\\development.csv')\n",
-    "evaluation = pd.read_csv(r'C:\\Users\\feder\\Desktop\\POLI\\DSL\\DSL_Winter_Project_2024\\DSL_Winter_Project_2024\\evaluation.csv')"
+    "development = pd.read_csv(\"./../../DSL_Winter_Project_2024/development.csv\")\n",
+    "evaluation = pd.read_csv(\"./../../DSL_Winter_Project_2024/evaluation.csv\")"
    ]
   },
   {
@@ -35,29 +35,7 @@
    "execution_count": 3,
    "id": "d8e7086c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "x              False\n",
-       "y              False\n",
-       "pmax[0]        False\n",
-       "negpmax[0]     False\n",
-       "area[0]        False\n",
-       "               ...  \n",
-       "pmax[17]       False\n",
-       "negpmax[17]    False\n",
-       "area[17]       False\n",
-       "tmax[17]       False\n",
-       "rms[17]        False\n",
-       "Length: 92, dtype: bool"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.concat([development, evaluation], sort=False)"
    ]
@@ -67,36 +45,14 @@
    "execution_count": 4,
    "id": "be12c6dd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Id             False\n",
-       "pmax[0]        False\n",
-       "negpmax[0]     False\n",
-       "area[0]        False\n",
-       "tmax[0]        False\n",
-       "               ...  \n",
-       "pmax[17]       False\n",
-       "negpmax[17]    False\n",
-       "area[17]       False\n",
-       "tmax[17]       False\n",
-       "rms[17]        False\n",
-       "Length: 91, dtype: bool"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.set_index('Id', inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "25ad6bbb",
    "metadata": {},
    "outputs": [
@@ -116,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "af3a0944",
    "metadata": {},
    "outputs": [
@@ -529,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "f87a99d0",
    "metadata": {},
    "outputs": [],
@@ -554,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "6a2cc8db",
    "metadata": {},
    "outputs": [],
@@ -564,28 +520,103 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "d99d485d",
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ab1c2601",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/xuyan/anaconda3/lib/python3.11/site-packages/skopt/optimizer/optimizer.py:449: UserWarning: The objective has been evaluated at this point before.\n",
+      "  warnings.warn(\"The objective has been evaluated \"\n",
+      "/Users/xuyan/anaconda3/lib/python3.11/site-packages/skopt/optimizer/optimizer.py:449: UserWarning: The objective has been evaluated at this point before.\n",
+      "  warnings.warn(\"The objective has been evaluated \"\n",
+      "/Users/xuyan/anaconda3/lib/python3.11/site-packages/skopt/optimizer/optimizer.py:449: UserWarning: The objective has been evaluated at this point before.\n",
+      "  warnings.warn(\"The objective has been evaluated \"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>BayesSearchCV(cv=5, estimator=RandomForestRegressor(), n_iter=20, n_jobs=-1,\n",
+       "              random_state=2024, scoring=&#x27;r2&#x27;,\n",
+       "              search_spaces={&#x27;max_depth&#x27;: [50, 100],\n",
+       "                             &#x27;max_features&#x27;: [&#x27;sqrt&#x27;, &#x27;log2&#x27;],\n",
+       "                             &#x27;min_samples_split&#x27;: [2, 5, 10],\n",
+       "                             &#x27;n_estimators&#x27;: [50, 100], &#x27;n_jobs&#x27;: [-1],\n",
+       "                             &#x27;random_state&#x27;: [2024]})</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" ><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">BayesSearchCV</label><div class=\"sk-toggleable__content\"><pre>BayesSearchCV(cv=5, estimator=RandomForestRegressor(), n_iter=20, n_jobs=-1,\n",
+       "              random_state=2024, scoring=&#x27;r2&#x27;,\n",
+       "              search_spaces={&#x27;max_depth&#x27;: [50, 100],\n",
+       "                             &#x27;max_features&#x27;: [&#x27;sqrt&#x27;, &#x27;log2&#x27;],\n",
+       "                             &#x27;min_samples_split&#x27;: [2, 5, 10],\n",
+       "                             &#x27;n_estimators&#x27;: [50, 100], &#x27;n_jobs&#x27;: [-1],\n",
+       "                             &#x27;random_state&#x27;: [2024]})</pre></div></div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">estimator: RandomForestRegressor</label><div class=\"sk-toggleable__content\"><pre>RandomForestRegressor()</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestRegressor</label><div class=\"sk-toggleable__content\"><pre>RandomForestRegressor()</pre></div></div></div></div></div></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "BayesSearchCV(cv=5, estimator=RandomForestRegressor(), n_iter=20, n_jobs=-1,\n",
+       "              random_state=2024, scoring='r2',\n",
+       "              search_spaces={'max_depth': [50, 100],\n",
+       "                             'max_features': ['sqrt', 'log2'],\n",
+       "                             'min_samples_split': [2, 5, 10],\n",
+       "                             'n_estimators': [50, 100], 'n_jobs': [-1],\n",
+       "                             'random_state': [2024]})"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.int = int\n",
     "bayes.fit(X_train_valid, y_train_valid)"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "df4c0321",
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "4d510129",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.28634783123115526"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "bayes.best_score_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "3f42ca03",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('max_depth', 81),\n",
+       "             ('max_features', 'sqrt'),\n",
+       "             ('min_samples_split', 5),\n",
+       "             ('n_estimators', 86),\n",
+       "             ('n_jobs', -1),\n",
+       "             ('random_state', 2024)])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "bayes.best_params_"
    ]
@@ -600,15 +631,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "39a31a3a",
+   "execution_count": 12,
+   "id": "7ca2d73b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rfr = RandomForestRegressor(n_estimators=,min_samples_split= ,max_features='',max_depth= ,random_state=rs)\n",
+    "eva_df=evaluation.drop(columns=dropped_cols)\n",
+    "eva_df=eva_df.drop(columns=[\"Id\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "39a31a3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.6269952617933\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/xuyan/anaconda3/lib/python3.11/site-packages/sklearn/base.py:457: UserWarning: X has feature names, but RandomForestRegressor was fitted without feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "rfr = RandomForestRegressor(n_estimators=86, min_samples_split= 5, max_features='sqrt', max_depth= 81, random_state=rs, n_jobs=-1)\n",
     "rfr.fit(X_train, y_train)\n",
-    "y_rfr=rfr.predict(X_test)\n",
-    "distance=np.mean(np.sqrt(np.sum((y_rfr - y_test) ** 2, axis=1)))\n",
+    "y_rfr=rfr.predict(X_valid)\n",
+    "distance=np.mean(np.sqrt(np.sum((y_rfr - y_valid) ** 2, axis=1)))\n",
     "print(distance)\n",
     "\n",
     "eva_y=rfr.predict(eva_df)\n",
@@ -636,7 +694,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
