--- a/model_selectioin/random_forest_regressor_test.ipynb
+++ b/model_selectioin/random_forest_regressor_test.ipynb
@@ -1677,6 +1677,46 @@
     "distance=np.mean(np.sqrt(np.sum((y_pred - y_test) ** 2, axis=1)))\n",
     "print(distance)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "OrderedDict([('max_depth', 81),\n",
+    "             ('max_features', 'sqrt'),\n",
+    "             ('min_samples_split', 5),\n",
+    "             ('n_estimators', 86),\n",
+    "             ('n_jobs', -1),\n",
+    "             ('random_state', 2024)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.5954839967045436\n"
+     ]
+    }
+   ],
+   "source": [
+    "rfr = RandomForestRegressor(n_estimators=86, min_samples_split= 5, max_features='sqrt', max_depth= 81, random_state=rs, n_jobs=-1)\n",
+    "rfr.fit(X_train, y_train)\n",
+    "y_rfr=rfr.predict(X_test)\n",
+    "distance=np.mean(np.sqrt(np.sum((y_rfr - y_test) ** 2, axis=1)))\n",
+    "print(distance)\n",
+    "\n",
+    "eva_y=rfr.predict(eva_df)\n",
+    "\n",
+    "df = pd.DataFrame(eva_y, columns=['Id', 'Predicted'])\n",
+    "df['Predicted'] = df.apply(lambda row: f\"{row['Id']:.1f}|{row['Predicted']:.1f}\", axis=1)\n",
+    "df['Id'] = df.index\n",
+    "df.to_csv('outputbayes1.csv', index=False, sep=',')\n"
+   ]
   }
  ],
  "metadata": {
