--- a/model_selectioin/random_forest_regressor_test.ipynb
+++ b/model_selectioin/random_forest_regressor_test.ipynb
@@ -581,7 +581,6 @@
     }
    ],
    "source": [
-    "# 标准化特征\n",
     "scaler = StandardScaler()\n",
     "X_train_scaled = scaler.fit_transform(X_train)\n",
     "X_test_scaled = scaler.transform(X_test)\n",
@@ -590,7 +589,7 @@
     "    model = keras.Sequential([\n",
     "        layers.Dense(hidden_units, activation=activation, input_shape=(X_train.shape[1],)),\n",
     "        layers.Dense(hidden_units, activation=activation),\n",
-    "        layers.Dense(2)  # 输出层，2个神经元对应 x 和 y\n",
+    "        layers.Dense(2)\n",
     "    ])\n",
     "    model.compile(optimizer=optimizer, loss='mean_squared_error')\n",
     "    return model\n",
