--- a/model_selectioin/bayes search continued.ipynb
+++ b/model_selectioin/bayes search continued.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "72e32fa9",
    "metadata": {},
    "outputs": [],
@@ -20,18 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "66d710ef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "development = pd.read_csv(r'c:\\Users\\zamuc\\OneDrive\\Desktop\\bayes babe\\development.csv')\n",
-    "evaluation = pd.read_csv(r'c:\\Users\\zamuc\\OneDrive\\Desktop\\bayes babe\\evaluation.csv')\n"
+    "development = pd.read_csv(r'C:\\Users\\feder\\Desktop\\POLI\\DSL\\DSL_Winter_Project_2024\\DSL_Winter_Project_2024\\development.csv')\n",
+    "evaluation = pd.read_csv(r'C:\\Users\\feder\\Desktop\\POLI\\DSL\\DSL_Winter_Project_2024\\DSL_Winter_Project_2024\\evaluation.csv')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "d8e7086c",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "be12c6dd",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "25ad6bbb",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "af3a0944",
    "metadata": {},
    "outputs": [
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "f87a99d0",
    "metadata": {},
    "outputs": [],
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "39a31a3a",
    "metadata": {},
    "outputs": [
@@ -1045,14 +1045,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nan\n"
+      "4.600878188029163\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\zamuc\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\base.py:486: UserWarning: X has feature names, but RandomForestRegressor was fitted without feature names\n",
+      "c:\\Users\\feder\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\base.py:458: UserWarning: X has feature names, but RandomForestRegressor was fitted without feature names\n",
       "  warnings.warn(\n"
      ]
     }
@@ -1060,8 +1060,8 @@
    "source": [
     "rfr = RandomForestRegressor(n_estimators= 100,min_samples_split= 5,max_features='sqrt',max_depth= 100 ,random_state=rs, n_jobs= -1)\n",
     "rfr.fit(X_train, y_train)\n",
-    "y_rfr=rfr.predict(X_test)\n",
-    "distance=np.mean(np.sqrt(np.sum((y_rfr - y_test) ** 2, axis=1)))\n",
+    "y_rfr=rfr.predict(X_valid)\n",
+    "distance=np.mean(np.sqrt(np.sum((y_rfr - y_valid) ** 2, axis=1)))\n",
     "print(distance)\n",
     "evaluation = evaluation.drop(columns=dropped_cols)\n",
     "eva_df = evaluation.drop(columns=['Id'])\n",
@@ -2383,7 +2383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "id": "aae57418",
    "metadata": {},
    "outputs": [
@@ -2391,14 +2391,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nan\n"
+      "4.553416022940264\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\zamuc\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\base.py:486: UserWarning: X has feature names, but RandomForestRegressor was fitted without feature names\n",
+      "c:\\Users\\feder\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\base.py:458: UserWarning: X has feature names, but RandomForestRegressor was fitted without feature names\n",
       "  warnings.warn(\n"
      ]
     }
@@ -2406,8 +2406,8 @@
    "source": [
     "rfr = RandomForestRegressor(n_estimators= 150,min_samples_split= 5,max_features='sqrt',max_depth= 250,random_state=rs, n_jobs= -1)\n",
     "rfr.fit(X_train, y_train)\n",
-    "y_rfr=rfr.predict(X_test)\n",
-    "distance=np.mean(np.sqrt(np.sum((y_rfr - y_test) ** 2, axis=1)))\n",
+    "y_rfr=rfr.predict(X_valid)\n",
+    "distance=np.mean(np.sqrt(np.sum((y_rfr - y_valid) ** 2, axis=1)))\n",
     "print(distance)\n",
     "\n",
     "eva_y=rfr.predict(eva_df)\n",
